# krilin

./: .gitignore  AGENTIC_AI_FRAMEWORK.md  AI_ARCHITECTURE.md  CHECKLIST.md  COMPLETE_BUILD_SUMMARY.md  DATABASE_SETUP.md  DEVELOPMENT_GUIDE.md  DOCKER_QUICK_START.md  FINAL_IMPLEMENTATION_REPORT.md  FRONTEND_IMPLEMENTATION_STATUS.md  FULL_REWRITE_SUMMARY.md  GAMIFICATION_SYSTEM.md  IMPLEMENTATION_COMPLETE_PHASE_1_2.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_STATUS.md  INFRASTRUCTURE_COMPLETE.md  KRILIN_AI_ENHANCEMENT_ANALYSIS.md  NAVIGATION_MAP.md  PHASE_3_COMPLETE.md  PLATFORM_REWRITE_COMPLETE_STATUS.md  PLATFORM_REWRITE_STATUS.md  PLATFORM_REWRITE_TRACKER.md  PLATFORM_VERIFICATION.md  QUICK_START_NEXT_SESSION.md  README.md  REWRITE_MASTER_SUMMARY.md  STARTUP_ANALYSIS.md  WORKFLOW_FRAMEWORK.md  ideas.txt  krilin-workflows-demo.tsx  package.json  platform-specification.md  tailwind.config.js
backend/: .env.docker.example  .env.example  Dockerfile  README.md  alembic.ini  design_tokens.json  docker-compose.yml  pyproject.toml  start.sh  stop.sh  test_streaming.py
backend/alembic/: env.py
backend/alembic/versions/: fdda2b2bc10f_initial_schema_with_compaction.py
backend/app/: admin.py  config.py  database.py  dependencies.py  main.py
backend/app/core/: ai_api.py  app_agent.py  app_installer.py  app_manifest.py  app_runtime.py  apps_api.py  context_factory.py  files_api.py  integrations_api.py  notifications_api.py  platform_context.py  schedule_api.py  storage_api.py  streams_api.py
backend/scripts/: create_superuser.py  docker-entrypoint.sh  run-migrations.sh
(+205 files in other folders)
